@@ -1,3 +1,7 @@
+2008-05-27  Zoltan Varga  <vargaz@gmail.com>
+
+	* mono-value-hash.h mono-value-hash.c: New files.
+
 2008-05-26  Zoltan Varga  <vargaz@gmail.com>
 
 	* Makefile.am (libmonoutils_la_SOURCES): Add mono-property-hash.{h,c}.
